# Fire-Prediction-Dataset-Creation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: adding-a-region.md  configuration.md  data-sources.md  output-schema.md  pipeline.md
firepredict/: __init__.py  config.py  rasters.py  region.py  sampling.py  weather.py  weather_bulk.py  weather_era5.py
firepredict/fire_sources/: __init__.py  base.py  portugal_sgif.py  spain_egif.py
firepredict/pipeline/: __main__.py  stage1_clean_fires.py  stage1b_generate_samples.py  stage1c_download_era5.py  stage2_add_weather.py  stage3_add_terrain.py
notebooks/: pipeline_walkthrough.ipynb
scripts/: build_era5_partial_dataset.py
