[project]
name = "fire-prediction-dataset"
version = "0.1.0"
description = "Region-agnostic wildfire-ignition dataset creation — fuses fire records, ERA5-Land weather and Copernicus terrain into a labelled fire/no-fire table ready for ML."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "xarray>=2024.0",
    "netCDF4>=1.6",
    "dask>=2024.0",          # xarray.open_mfdataset lazy backend
    "cdsapi>=0.7",           # only needed for stage 1c (ERA5-Land download)
    "openmeteo-requests>=1.2",  # only needed for the optional Open-Meteo backend
    "requests-cache>=1.2",
    "retry-requests>=2.0",
    "openpyxl>=3.1",         # reading SGIF .xlsx registries
]

[project.optional-dependencies]
# Extras for the walkthrough notebook (not needed to build the dataset).
notebook = ["jupyterlab>=4.0", "matplotlib>=3.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["firepredict"]
